feat: ajout de route et nav sync to db
